# p7zip-hybrid

./: .gitignore  README.md  makefile.macosx_intel_universal
CPP/7zip/Archive/Rar/: RarIn.cpp  RarItem.cpp
CPP/7zip/Archive/Tar/: TarUpdate.cpp
CPP/7zip/Archive/Zip/: ZipIn.cpp  ZipIn.h  ZipItem.cpp
CPP/7zip/Crypto/: Sha1.cpp
CPP/7zip/UI/Common/: ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  Extract.cpp
ExtLib/universalchardet/src/wrapper/: EncodingDetector.cpp  EncodingDetector.h
ext-libs/: build-ext-libs.sh
ext-libs/EncodingDetector/: CMakeLists.txt
ext-libs/EncodingDetector/include/: EncodingDetector.h
ext-libs/EncodingDetector/src/: EncodingDetector.cpp
ext-libs/universalchardet/: CMakeLists.txt
p7zip/: makefile  makefile.macosx_intel_universal
p7zip/CPP/7zip/Archive/7z/: 7zUpdate.cpp
p7zip/CPP/7zip/Archive/Rar/: RarIn.cpp
p7zip/CPP/7zip/Archive/Zip/: ZipIn.cpp  ZipIn.h
p7zip/CPP/7zip/Common/: VirtThread.cpp  VirtThread.h
p7zip/CPP/7zip/UI/Common/: AppleDoubleEntry.h  ArchiveOpenCallback.h
p7zip/CPP/Common/: EFileFind.h  StringConvert.cpp  StringConvert.h
p7zip/CPP/Windows/: DLL.cpp
